tests/errors/ari-builtin-signature-param.ari
extern "ari" fn bad(value: u64) -> i64 = "ari_builtin_write_i64";

fn main() -> i64 {
  return 0;
}
